--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
   web:
     depends_on:
       - db
-    image: tomcat_teste
+    image: tomcat-vcriquinho
     ports:
       - '8080:8080'
     environment:
@@ -24,5 +24,3 @@ services:
       JAVA_POSTGRES_DB: vcRiquinho
 volumes:
   postgres-db-volume:
-  webapps:
-    driver: local
