--- a/pom.xml
+++ b/pom.xml
@@ -70,17 +70,20 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- SLF4J API -->
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.30</version>
+			<version>2.0.13</version>
 		</dependency>
-		<!-- Logback Classic -->
+
+
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.5.6</version>
+			<scope>test</scope>
 		</dependency>
 
 
