--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   db:
     image: postgres:16
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
     ports:
         - 5433:5432
@@ -24,8 +25,8 @@ services:
     ports:
       - 8080:8080
     environment:
-      JAVA_POSTGRES_USER: wolke
-      JAVA_POSTGRES_PASSWORD: wolke2024
+      JAVA_POSTGRES_USER: postgres
+      JAVA_POSTGRES_PASSWORD: admin
       JAVA_POSTGRES_DB: vcRiquinho
     depends_on:
       - db
