--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,6 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.base.servlet.HomeServlet</servlet-class>
@@ -19,13 +18,12 @@
 		<servlet-name>HomeServlet</servlet-name>
 		<url-pattern>/home</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet-mapping>
 		<servlet-name>HomeServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
-	
+
 	<servlet>
 		<servlet-name>ContaServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.conta.servlet.ContaServlet</servlet-class>
@@ -33,6 +31,46 @@
 
 	<servlet-mapping>
 		<servlet-name>ContaServlet</servlet-name>
-		<url-pattern>/teste</url-pattern>
+		<url-pattern>/conta</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>FormPessoaServlet</servlet-name>
+		<servlet-class>br.com.ifsp.vcRiquinho.pessoa.servlet.FormPessoaServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>FormPessoaServlet</servlet-name>
+		<url-pattern>/cadastroPessoa</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>PessoaServlet</servlet-name>
+		<servlet-class>br.com.ifsp.vcRiquinho.pessoa.servlet.PessoaServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>PessoaServlet</servlet-name>
+		<url-pattern>/pessoa</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>br.com.ifsp.vcRiquinho.usuario.servlet.LoginServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>br.com.ifsp.vcRiquinho.usuario.servlet.LogoutServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 </web-app>
