--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,13 +34,13 @@
 	</servlet-mapping>
 
 	<servlet>
-		<servlet-name>FormPessoaServlet</servlet-name>
-		<servlet-class>br.com.ifsp.vcRiquinho.pessoa.servlet.FormPessoaServlet</servlet-class>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>br.com.ifsp.vcRiquinho.usuario.servlet.RegisterServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>FormPessoaServlet</servlet-name>
-		<url-pattern>/cadastroPessoa</url-pattern>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/register</url-pattern>
 	</servlet-mapping>
 
 	<servlet>
