--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,22 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	
+	
+    <error-page>
+        <error-code>404</error-code>
+        <location>/errors/404.jsp</location>
+    </error-page>
 
+    <error-page>
+        <error-code>500</error-code>
+        <location>/errors/500.jsp</location>
+    </error-page>
+    
+    <error-page>
+        <location>/errors/general-error.jsp</location>
+    </error-page>
+	
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.base.servlet.HomeServlet</servlet-class>
@@ -18,7 +33,7 @@
 		<url-pattern>/home</url-pattern>
 	</servlet-mapping>
 
-	<servlet-mapping>
+	<servlet-mapping> 
 		<servlet-name>HomeServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
