--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,22 +7,41 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
-	
-    <error-page>
-        <error-code>404</error-code>
-        <location>/errors/404.jsp</location>
-    </error-page>
 
-    <error-page>
-        <error-code>500</error-code>
-        <location>/errors/500.jsp</location>
-    </error-page>
-    
-    <error-page>
-        <location>/errors/general-error.jsp</location>
-    </error-page>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errors/404.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/errors/500.jsp</location>
+	</error-page>
+
+	<error-page>
+		<location>/errors/general-error.jsp</location>
+	</error-page>
+
+	<filter>
+		<filter-name>LoginFilter</filter-name>
+		<filter-class>br.com.ifsp.vcRiquinho.base.view.filter.LoginFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/simulacao</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/profile</url-pattern>
+	</filter-mapping>
 	
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/painelProduto</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
@@ -34,9 +53,7 @@
 		<url-pattern>/home</url-pattern>
 	</servlet-mapping>
 
-
-	<servlet-mapping> 
-
+	<servlet-mapping>
 		<servlet-name>HomeServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
@@ -90,9 +107,8 @@
 		<servlet-name>LogoutServlet</servlet-name>
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
 
+	<servlet>
 		<servlet-name>ProfileServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.usuario.servlet.ProfileServlet</servlet-class>
 	</servlet>
@@ -101,7 +117,7 @@
 		<servlet-name>ProfileServlet</servlet-name>
 		<url-pattern>/profile</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>ProdutoViewServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.produto.servlet.ProdutoViewServlet</servlet-class>
@@ -111,7 +127,7 @@
 		<servlet-name>ProdutoViewServlet</servlet-name>
 		<url-pattern>/painelProduto</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>ProdutoDatabaseServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.produto.servlet.ProdutoDatabaseServlet</servlet-class>
