--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-
+	<!--  Páginas de erro -->
 	<error-page>
 		<error-code>404</error-code>
 		<location>/errors/404.jsp</location>
@@ -23,6 +23,7 @@
 		<location>/errors/general-error.jsp</location>
 	</error-page>
 
+	<!--  Filtros -->
 	<filter>
 		<filter-name>LoginFilter</filter-name>
 		<filter-class>br.com.ifsp.vcRiquinho.base.view.filter.LoginFilter</filter-class>
@@ -43,6 +44,23 @@
 		<url-pattern>/painelProduto</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>AdminFilter</filter-name>
+		<filter-class>br.com.ifsp.vcRiquinho.base.view.filter.AdminFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>AdminFilter</filter-name>
+		<url-pattern>/painelProduto</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>AdminFilter</filter-name>
+		<url-pattern>/produto</url-pattern>
+	</filter-mapping>
+
+
+	<!--  Mapeando para servlets -->
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.base.servlet.HomeServlet</servlet-class>
