--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-	<!--  Páginas de erro -->
+	<!-- Páginas de erro -->
 	<error-page>
 		<error-code>404</error-code>
 		<location>/errors/404.jsp</location>
@@ -23,7 +23,7 @@
 		<location>/errors/general-error.jsp</location>
 	</error-page>
 
-	<!--  Filtros -->
+	<!-- Filtros -->
 	<filter>
 		<filter-name>LoginFilter</filter-name>
 		<filter-class>br.com.ifsp.vcRiquinho.base.view.filter.LoginFilter</filter-class>
@@ -36,9 +36,14 @@
 
 	<filter-mapping>
 		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/simulacaoGeral</url-pattern>
+	</filter-mapping>
+
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
 		<url-pattern>/profile</url-pattern>
 	</filter-mapping>
-	
+
 	<filter-mapping>
 		<filter-name>LoginFilter</filter-name>
 		<url-pattern>/painelProduto</url-pattern>
@@ -48,7 +53,7 @@
 		<filter-name>AdminFilter</filter-name>
 		<filter-class>br.com.ifsp.vcRiquinho.base.view.filter.AdminFilter</filter-class>
 	</filter>
-	
+
 	<filter-mapping>
 		<filter-name>AdminFilter</filter-name>
 		<url-pattern>/painelProduto</url-pattern>
@@ -59,8 +64,13 @@
 		<url-pattern>/produto</url-pattern>
 	</filter-mapping>
 
+	<filter-mapping>
+		<filter-name>AdminFilter</filter-name>
+		<url-pattern>/simulacaoGeral</url-pattern>
+	</filter-mapping>
 
-	<!--  Mapeando para servlets -->
+
+	<!-- Mapeando para servlets -->
 	<servlet>
 		<servlet-name>HomeServlet</servlet-name>
 		<servlet-class>br.com.ifsp.vcRiquinho.base.servlet.HomeServlet</servlet-class>
@@ -154,5 +164,25 @@
 	<servlet-mapping>
 		<servlet-name>ProdutoDatabaseServlet</servlet-name>
 		<url-pattern>/produto</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>SimulacaoServlet</servlet-name>
+		<servlet-class> br.com.ifsp.vcRiquinho.simulador.servlet.SimulacaoServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SimulacaoServlet</servlet-name>
+		<url-pattern>/simulacao</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>SimulacaoGeralServlet</servlet-name>
+		<servlet-class> br.com.ifsp.vcRiquinho.simulador.servlet.SimulacaoGeralServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SimulacaoGeralServlet</servlet-name>
+		<url-pattern>/simulacaoGeral</url-pattern>
 	</servlet-mapping>
 </web-app>
