--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<version>1.5.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.5.2.Final</version>
+		</dependency>
+
 
 	</dependencies>
 
